AWS/AMI/cloudformation.yml
---

AWSTemplateFormatVersion: "2010-09-09"

Description: This template creates a new VPC and deploys a production-grade HA cluster in AWS

#============================================================
# UI Definition
#============================================================
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      -
        Label:
          default: Cluster Manager Configuration
        Parameters:
          - InstanceManagerImageId
          - InstanceManagerInstanceType
      -
        Label:
          default: Cluster Worker Configuration
        Parameteres:
          - InstanceWorkerImageId
          - InstanceWorkerInstanceType
      -
        Label:
          default: Network Configuration
        Parameters:
          - HostedZoneName
          - IpProtocolListenerWorker1
          - IpProtocolListenerWorker2
          - PortListenerWorker1
          - PortListenerWorker2
          - PortTargetGroupWorker1
          - PortTargetGroupWorker2
          - ProtocolListenerWorker1
          - ProtocolListenerWorker2
          - RecordSetName1
          - RecordSetName2
          - SecurityGroupCidrIpWorker1
          - SecurityGroupCidrIpWorker2
          - SubnetCidrBlockPrivate1
          - SubnetCidrBlockPrivate2
          - SubnetCidrBlockPrivate3
          - SubnetCidrBlockPublic1
          - SubnetCidrBlockPublic2
          - SubnetCidrBlockPublic3
          - VPCCidrBlock
      -
        Label:
          default: Security
        Parameters:
          - Identifier
          - KeyName
          
    ParameterLabels:
      HostedZoneName:
        default: The name of the hosted zone that you want to create records in
      Identifier:
        default: The Identifier of the certificate you want to use
      InstanceManagerImageId:
        default: AMI to use for Cluster Manager Instances
      InstanceManagerInstanceType:
        default: Cluster Manager Instance Size
      InstanceWorkerImageId:
        default: AMI to use for Cluster Worker Instances
      InstanceWorkerInstanceType:
        default: Cluster Worker Instance Size
      IpProtocolListenerWorker1:
        default: The IP protocol for Listener Worker 1
      IpProtocolListenerWorker2:
        default: The IP protocol for Listener Worker 2
      KeyName:
        default: The name of the key pair
      PortListenerWorker1:
        default: The listening port for Listener Worker 1
      PortListenerWorker2:
        default: The listening port for Listener Worker 2
      PortTargetGroupWorker1:
        default: The internal listening port for service 1
      PortTargetGroupWorker2:
        default: The internal listening port for service 2
      ProtocolListenerWorker1:
        default: The protocol for Listener Worker 1
      ProtocolListenerWorker2:
        default: The protocol for Listener Worker 2
      RecordSetName1:
        default: The name of the Record Set for service 1
      RecordSetName2:
        default: The name of the Record Set for service 2
      SecurityGroupCidrIpWorker1:
        default: Allowed CIDR for ALB 1 Cluster Worker Access
      SecurityGroupCidrIpWorker2:
        default: Allowed CIDR for ALB 2 Cluster Worker Access
      SubnetCidrBlockPrivate1:
        default: Private Subnet 1 CIDR
      SubnetCidrBlockPrivate2:
        default: Private Subnet 2 CIDR
      SubnetCidrBlockPrivate3:
        default: Private Subnet 3 CIDR
      SubnetCidrBlockPublic1:
        default: Public Subnet 1 CIDR
      SubnetCidrBlockPublic2:
        default: Public Subnet 2 CIDR
      SubnetCidrBlockPublic3:
        default: Public Subnet 3 CIDR
      VPCCidrBlock:
        default: VPC CIDR
                
Parameters:

  HostedZoneName:
    Default: 'sebastian-colomar.com'
    Description: >
      The name of the hosted zone that you want to create records in.
    Type: String

  Identifier:
    Default: 'c3f3310b-f4ed-4874-8849-bd5c2cfe001f'
    Description: >
      The Identifier of the certificate you want to use.
    Type: String

  InstanceManagerImageId:
    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
    Description: >
      Select AMI to use for the Cluster Manager instances. 
      When it's left blank, the default AMI for your AWS region will be used. 
      When setting an AMI, it must be available in your current region.
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    
  InstanceManagerInstanceType:
    AllowedValues:
      - t2.nano
      - t2.micro
      - t3.small
      - t3.medium
      - t3.large
      - t3a.nano
      - t3a.micro
      - t3a.small
      - t3a.medium
      - t3a.large
    ConstraintDescription: >
      Choose an instance type.
    Default: t3a.nano
    Description: >
      Select Amazon EC2 instance type for the Cluster Manager instances.
    Type: String
    
  InstanceWorkerImageId:
    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
    Description: >
      Select AMI to use for the Cluster Worker instances. 
      When it's left blank, the default AMI for your AWS region will be used. 
      When setting an AMI, it must be available in your current region.
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    
  InstanceWorkerInstanceType:
    AllowedValues:
      - t2.nano
      - t2.micro
      - t3.small
      - t3.medium
      - t3.large
      - t3a.nano
      - t3a.micro
      - t3a.small
      - t3a.medium
      - t3a.large
    ConstraintDescription: >
      Choose an instance type.
    Default: t3a.nano
    Description: >
      Select Amazon EC2 instance type for the Cluster Worker instances.
    Type: String
    
  IpProtocolListenerWorker1:
    Default: tcp
    Description: >
      The IP protocol for Listener Worker 1.
    Type: String
    
  IpProtocolListenerWorker2:
    Default: tcp
    Description: >
      The IP protocol for Listener Worker 2.
    Type: String
    
  KeyName:
    Default: proxy2aws
    Description: >
      The name of the key pair. You can create a key pair using CreateKeyPair or ImportKeyPair.
    Type: String
    
  PortListenerWorker1:
    Default: 443
    Description: >
      The listening port for Listener Worker 1.
    Type: Number
    
  PortListenerWorker2:
    Default: 443
    Description: >
      The listening port for Listener Worker 2.
    Type: Number
    
  ProtocolListenerWorker1:
    Default: HTTPS
    Description: >
      The protocol for Listener Worker 1.
    Type: String
    
  ProtocolListenerWorker2:
    Default: HTTPS
    Description: >
      The protocol for Listener Worker 2.
    Type: String
    
  PortTargetGroupWorker1:
    Default: 8080
    Description: >
      The internal listening port for service 1.
    Type: Number
    
  PortTargetGroupWorker2:
    Default: 8888
    Description: >
      The internal listening port for service 2.
    Type: Number
    
  ProtocolTargetGroupWorker1:
    Default: HTTP
    Description: >
      The internal protocol for service 1.
    Type: String
    
  ProtocolTargetGroupWorker2:
    Default: HTTP
    Description: >
      The internal protocol for service 2.
    Type: String
    
  RecordSetName1:
    Default: aws2prem
    Description: >
      The name of the Record Set for service 1.
    Type: String
    
  RecordSetName2:
    Default: aws2cloud
    Description: >
      The name of the Record Set for service 2.
    Type: String
    
  SecurityGroupCidrIpWorker1:
    Default: 0.0.0.0/0
    Description: >
      Allowed CIDR block for external web access to the Cluster Worker 1 Load Balancer. 
      It defines the block of IPs that can access the Cluster Worker Load Balancer 1 and, consequently, the application servers. 
      Set it to 0.0.0.0/0 to make it accessible from anywhere.
    Type: String
    
  SecurityGroupCidrIpWorker2:
    Default: 0.0.0.0/0
    Description: >
      Allowed CIDR block for external web access to the Cluster Worker 2 Load Balancer. 
      It defines the block of IPs that can access the Cluster Worker Load Balancer 2 and, consequently, the application servers. 
      Set it to 0.0.0.0/0 to make it accessible from anywhere.
    Type: String
    
  SubnetCidrBlockPrivate1:
    Default: 10.168.1.0/24
    Description: >
      CIDR block for private subnet located in Availability Zone 1. 
      All resources located on this subnet are provided an IP within this address block. 
    Type: String
    
  SubnetCidrBlockPrivate2:
    Default: 10.168.3.0/24
    Description: >
      CIDR block for private subnet located in Availability Zone 2. 
      All resources located on this subnet are provided an IP within this address block. 
    Type: String
    
  SubnetCidrBlockPrivate3:
    Default: 10.168.5.0/24
    Description: >
      CIDR block for private subnet located in Availability Zone 3. 
      All resources located on this subnet are provided an IP within this address block. 
    Type: String
    
  SubnetCidrBlockPublic1:
    Default: 10.168.2.0/24
    Description: >
      CIDR block for public (DMZ) subnet located in Availability Zone 1. 
      All resources located on this subnet are provided an IP within this address block. 
    Type: String
    
  SubnetCidrBlockPublic2:
    Default: 10.168.4.0/24
    Description: >
      CIDR block for public (DMZ) subnet located in Availability Zone 2. 
      All resources located on this subnet are provided an IP within this address block. 
    Type: String
    
  SubnetCidrBlockPublic3:
    Default: 10.168.6.0/24
    Description: >
      CIDR block for public (DMZ) subnet located in Availability Zone 3. 
      All resources located on this subnet are provided an IP within this address block. 
    Type: String
    
  VPCCidrBlock:
    Default: 10.168.0.0/16
    Description: >
      CIDR block for the VPC. All the subnets and resources will have an IP within this address block.
    Type: String
    
#============================================================
# Resources
#============================================================
Resources:

  EIP1:
    Properties:
      Domain: vpc
    Type: AWS::EC2::EIP

  EIP2:
    Properties:
      Domain: vpc
    Type: AWS::EC2::EIP

  EIP3:
    Properties:
      Domain: vpc
    Type: AWS::EC2::EIP

  InstanceManager1:
    Properties:
      IamInstanceProfile: !Ref InstanceProfile
      ImageId: !Ref InstanceManagerImageId
      InstanceType: !Ref InstanceManagerInstanceType
      KeyName: !Ref KeyName
      SubnetId: !Ref SubnetPrivate1
      UserData:
        "Fn::Base64":
          !Sub |
            #!/bin/sh
            cd /tmp && curl https://amazon-ssm-${AWS::Region}.s3.amazonaws.com/latest/linux_amd64/amazon-ssm-agent.rpm -o amazon-ssm-agent.rpm && sudo yum install -y amazon-ssm-agent.rpm
            sudo yum install -y git && git clone https://github.com/secobau/docker.git && chmod +x docker/AWS/install/AMI/node.sh && ./docker/AWS/install/AMI/node.sh && rm -rf docker
    Type: AWS::EC2::Instance
            
  InstanceManager2:
    Properties:
      IamInstanceProfile: !Ref InstanceProfile
      ImageId: !Ref InstanceManagerImageId
      InstanceType: !Ref InstanceManagerInstanceType
      KeyName: !Ref KeyName
      SubnetId: !Ref SubnetPrivate2
      UserData:
        "Fn::Base64":
          !Sub |
            #!/bin/sh
            cd /tmp && curl https://amazon-ssm-${AWS::Region}.s3.amazonaws.com/latest/linux_amd64/amazon-ssm-agent.rpm -o amazon-ssm-agent.rpm && sudo yum install -y amazon-ssm-agent.rpm
            sudo yum install -y git && git clone https://github.com/secobau/docker.git && chmod +x docker/AWS/install/AMI/node.sh && ./docker/AWS/install/AMI/node.sh && rm -rf docker
    Type: AWS::EC2::Instance

  InstanceManager3:
    Properties:
      IamInstanceProfile: !Ref InstanceProfile
      ImageId: !Ref InstanceManagerImageId
      InstanceType: !Ref InstanceManagerInstanceType
      KeyName: !Ref KeyName
      SubnetId: !Ref SubnetPrivate3
      UserData:
        "Fn::Base64":
          !Sub |
            #!/bin/sh
            cd /tmp && curl https://amazon-ssm-${AWS::Region}.s3.amazonaws.com/latest/linux_amd64/amazon-ssm-agent.rpm -o amazon-ssm-agent.rpm && sudo yum install -y amazon-ssm-agent.rpm
            sudo yum install -y git && git clone https://github.com/secobau/docker.git && chmod +x docker/AWS/install/AMI/node.sh && ./docker/AWS/install/AMI/node.sh && rm -rf docker
    Type: AWS::EC2::Instance

  InstanceProfile:
    Properties:
      Roles: [!Ref Role]
    Type: AWS::IAM::InstanceProfile

  InstanceWorker1:
    Properties:
      IamInstanceProfile: !Ref InstanceProfile
      ImageId: !Ref InstanceWorkerImageId
      InstanceType: !Ref InstanceWorkerInstanceType
      KeyName: !Ref KeyName
      SubnetId: !Ref SubnetPrivate1
      UserData:
        "Fn::Base64":
          !Sub |
            #!/bin/sh
            cd /tmp && curl https://amazon-ssm-${AWS::Region}.s3.amazonaws.com/latest/linux_amd64/amazon-ssm-agent.rpm -o amazon-ssm-agent.rpm && sudo yum install -y amazon-ssm-agent.rpm
            sudo yum install -y git && git clone https://github.com/secobau/docker.git && chmod +x docker/AWS/install/AMI/node.sh && ./docker/AWS/install/AMI/node.sh && rm -rf docker
    Type: AWS::EC2::Instance

  InstanceWorker2:
    Properties:
      IamInstanceProfile: !Ref InstanceProfile
      ImageId: !Ref InstanceWorkerImageId
      InstanceType: !Ref InstanceWorkerInstanceType
      KeyName: !Ref KeyName
      SubnetId: !Ref SubnetPrivate2
      UserData:
        "Fn::Base64":
          !Sub |
            #!/bin/sh
            cd /tmp && curl https://amazon-ssm-${AWS::Region}.s3.amazonaws.com/latest/linux_amd64/amazon-ssm-agent.rpm -o amazon-ssm-agent.rpm && sudo yum install -y amazon-ssm-agent.rpm
            sudo yum install -y git && git clone https://github.com/secobau/docker.git && chmod +x docker/AWS/install/AMI/node.sh && ./docker/AWS/install/AMI/node.sh && rm -rf docker
    Type: AWS::EC2::Instance

  InstanceWorker3:
    Properties:
      IamInstanceProfile: !Ref InstanceProfile
      ImageId: !Ref InstanceWorkerImageId
      InstanceType: !Ref InstanceWorkerInstanceType
      KeyName: !Ref KeyName
      SubnetId: !Ref SubnetPrivate3
      UserData:
        "Fn::Base64":
          !Sub |
            #!/bin/sh
            cd /tmp && curl https://amazon-ssm-${AWS::Region}.s3.amazonaws.com/latest/linux_amd64/amazon-ssm-agent.rpm -o amazon-ssm-agent.rpm && sudo yum install -y amazon-ssm-agent.rpm
            sudo yum install -y git && git clone https://github.com/secobau/docker.git && chmod +x docker/AWS/install/AMI/node.sh && ./docker/AWS/install/AMI/node.sh && rm -rf docker
    Type: AWS::EC2::Instance

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  ListenerWorker1:
    Properties: 
      Certificates:
        - CertificateArn: !Sub 'arn:aws:acm:${AWS::Region}:${AWS::AccountId}:certificate/${Identifier}'
      DefaultActions: 
        - TargetGroupArn: !Ref TargetGroupWorker1
          Type: forward
      LoadBalancerArn: !Ref LoadBalancerWorker1
      Port: !Ref PortListenerWorker1
      Protocol: !Ref ProtocolListenerWorker1
    Type: AWS::ElasticLoadBalancingV2::Listener
 
  ListenerWorker2:
    Properties: 
      Certificates:
        - CertificateArn: !Sub 'arn:aws:acm:${AWS::Region}:${AWS::AccountId}:certificate/${Identifier}'
      DefaultActions: 
        - TargetGroupArn: !Ref TargetGroupWorker2
          Type: forward
      LoadBalancerArn: !Ref LoadBalancerWorker2
      Port: !Ref PortListenerWorker2
      Protocol: !Ref ProtocolListenerWorker2
    Type: AWS::ElasticLoadBalancingV2::Listener
 
  LoadBalancerWorker1:
    Properties: 
      SecurityGroups:
        - !GetAtt VPC.DefaultSecurityGroup
        - !Ref SecurityGroupWorker1
      Subnets: 
        - !Ref SubnetPublic1
        - !Ref SubnetPublic2
        - !Ref SubnetPublic3
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
        
  LoadBalancerWorker2:
    Properties: 
      SecurityGroups:
        - !GetAtt VPC.DefaultSecurityGroup
        - !Ref SecurityGroupWorker2
      Subnets: 
        - !Ref SubnetPublic1
        - !Ref SubnetPublic2
        - !Ref SubnetPublic3
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
        
  NatGateway1:
    DependsOn: VPCGatewayAttachment
    Properties:
      AllocationId: !GetAtt EIP1.AllocationId
      SubnetId: !Ref SubnetPublic1
    Type: AWS::EC2::NatGateway

  NatGateway2:
    DependsOn: VPCGatewayAttachment
    Properties:
      AllocationId: !GetAtt EIP2.AllocationId
      SubnetId: !Ref SubnetPublic2
    Type: AWS::EC2::NatGateway

  NatGateway3:
    DependsOn: VPCGatewayAttachment
    Properties:
      AllocationId: !GetAtt EIP3.AllocationId
      SubnetId: !Ref SubnetPublic3
    Type: AWS::EC2::NatGateway

  RecordSet1:
    Properties: 
      AliasTarget: 
        DNSName: !GetAtt LoadBalancerWorker1.DNSName
        HostedZoneId: !GetAtt LoadBalancerWorker1.CanonicalHostedZoneID
      HostedZoneName: !Sub '${HostedZoneName}.'
      Name: !Sub '${RecordSetName1}.${HostedZoneName}'
      Type: A
    Type: AWS::Route53::RecordSet
      
  RecordSet2:
    Properties: 
      AliasTarget: 
        DNSName: !GetAtt LoadBalancerWorker2.DNSName
        HostedZoneId: !GetAtt LoadBalancerWorker2.CanonicalHostedZoneID
      HostedZoneName: !Sub '${HostedZoneName}.'
      Name: !Sub '${RecordSetName2}.${HostedZoneName}'
      Type: A
    Type: AWS::Route53::RecordSet
      
  Role:
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          -
            Action:
              - sts:AssumeRole
            Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
        Version: 2012-10-17
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
    Type: AWS::IAM::Role

  RoutePrivate1:
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1
      RouteTableId: !Ref RouteTablePrivate1
    Type: AWS::EC2::Route

  RoutePrivate2:
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway2
      RouteTableId: !Ref RouteTablePrivate2
    Type: AWS::EC2::Route

  RoutePrivate3:
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway3
      RouteTableId: !Ref RouteTablePrivate3
    Type: AWS::EC2::Route

  RoutePublic:
    DependsOn: [VPCGatewayAttachment]
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref RouteTablePublic
    Type: AWS::EC2::Route

  RouteTablePrivate1:
    Properties:
      VpcId: !Ref VPC
    Type: AWS::EC2::RouteTable

  RouteTablePrivate2:
    Properties:
      VpcId: !Ref VPC
    Type: AWS::EC2::RouteTable

  RouteTablePrivate3:
    Properties:
      VpcId: !Ref VPC
    Type: AWS::EC2::RouteTable

  RouteTablePublic:
    Properties:
      VpcId: !Ref VPC
    Type: AWS::EC2::RouteTable

  SecurityGroupWorker1:
    Properties:
      GroupDescription: Allow access to the applications running on the cluster of workers for Service 1
      SecurityGroupIngress:
      - 
        CidrIp: !Ref SecurityGroupCidrIpWorker1
        FromPort: !Ref PortListenerWorker1
        IpProtocol: !Ref IpProtocolListenerWorker1
        ToPort: !Ref PortListenerWorker1
      VpcId: !Ref VPC
    Type: AWS::EC2::SecurityGroup
      
  SecurityGroupWorker2:
    Properties:
      GroupDescription: Allow access to the applications running on the cluster of workers for Service 2
      SecurityGroupIngress:
      - 
        CidrIp: !Ref SecurityGroupCidrIpWorker2
        FromPort: !Ref PortListenerWorker2
        IpProtocol: !Ref IpProtocolListenerWorker2
        ToPort: !Ref PortListenerWorker2
      VpcId: !Ref VPC
    Type: AWS::EC2::SecurityGroup
      
  SubnetPrivate1:
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: !Ref SubnetCidrBlockPrivate1
      VpcId: !Ref VPC
    Type: AWS::EC2::Subnet

  SubnetPrivate2:
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: !Ref SubnetCidrBlockPrivate2
      VpcId: !Ref VPC
    Type: AWS::EC2::Subnet

  SubnetPrivate3:
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 2
          - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: !Ref SubnetCidrBlockPrivate3
      VpcId: !Ref VPC
    Type: AWS::EC2::Subnet

  SubnetPublic1:
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: !Ref SubnetCidrBlockPublic1
      VpcId: !Ref VPC
    Type: AWS::EC2::Subnet

  SubnetPublic2:
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: !Ref SubnetCidrBlockPublic2
      VpcId: !Ref VPC
    Type: AWS::EC2::Subnet

  SubnetPublic3:
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 2
          - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: !Ref SubnetCidrBlockPublic3
      VpcId: !Ref VPC
    Type: AWS::EC2::Subnet

  SubnetRouteTableAssociationPrivate1:
    Properties:
      RouteTableId: !Ref RouteTablePrivate1
      SubnetId: !Ref SubnetPrivate1
    Type: AWS::EC2::SubnetRouteTableAssociation

  SubnetRouteTableAssociationPrivate2:
    Properties:
      RouteTableId: !Ref RouteTablePrivate2
      SubnetId: !Ref SubnetPrivate2
    Type: AWS::EC2::SubnetRouteTableAssociation

  SubnetRouteTableAssociationPrivate3:
    Properties:
      RouteTableId: !Ref RouteTablePrivate3
      SubnetId: !Ref SubnetPrivate3
    Type: AWS::EC2::SubnetRouteTableAssociation

  SubnetRouteTableAssociationPublic1:
    Properties:
      RouteTableId: !Ref RouteTablePublic
      SubnetId: !Ref SubnetPublic1
    Type: AWS::EC2::SubnetRouteTableAssociation

  SubnetRouteTableAssociationPublic2:
    Properties:
      RouteTableId: !Ref RouteTablePublic
      SubnetId: !Ref SubnetPublic2
    Type: AWS::EC2::SubnetRouteTableAssociation

  SubnetRouteTableAssociationPublic3:
    Properties:
      RouteTableId: !Ref RouteTablePublic
      SubnetId: !Ref SubnetPublic3
    Type: AWS::EC2::SubnetRouteTableAssociation

  TargetGroupWorker1:
    Properties: 
      Port: !Ref PortTargetGroupWorker1
      Protocol: !Ref ProtocolTargetGroupWorker1
      Targets: 
        -   Id: !Ref InstanceWorker1
        -   Id: !Ref InstanceWorker2
        -   Id: !Ref InstanceWorker3
      TargetType: instance
      VpcId: !Ref VPC
    Type: AWS::ElasticLoadBalancingV2::TargetGroup

  TargetGroupWorker2:
    Properties: 
      Port: !Ref PortTargetGroupWorker2
      Protocol: !Ref ProtocolTargetGroupWorker2
      Targets: 
        -   Id: !Ref InstanceWorker1
        -   Id: !Ref InstanceWorker2
        -   Id: !Ref InstanceWorker3
      TargetType: instance
      VpcId: !Ref VPC
    Type: AWS::ElasticLoadBalancingV2::TargetGroup

  VPC:
    Properties:
      CidrBlock: !Ref VPCCidrBlock
    Type: "AWS::EC2::VPC"

  VPCGatewayAttachment:
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC
    Type: AWS::EC2::VPCGatewayAttachment
